# wasm-rust-template

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: tests.rs
www/: index.html  package.json  tsconfig.json  vite.config.ts
www/src/: main.ts  style.css
