[package]
name = "wasm-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.21"
pollster = "0.3.0"
web-sys = { version = "0.3.69", features = ["HtmlButtonElement", "DomStringMap", "PointerEvent"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"
